--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0",
     "xml-loader": "^1.2.1"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.2"
   }
 }
