--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "date-fns": "^2.29.2"
+    "date-fns": "^2.29.2",
+    "uuid": "^8.3.2"
   }
 }
