--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "date-fns": "^2.29.2",
     "simplebar": "^5.3.8",
+    "sortablejs": "^1.15.0",
     "uuid": "^8.3.2"
   }
 }
